// The Firmament project
// Copyright (c) 2011-2012 Malte Schwarzkopf <malte.schwarzkopf@cl.cam.ac.uk>
//
// Resource descriptor protobuf.

package firmament;

import "task_desc.proto";

message ResourceDescriptor {
  required string uuid = 1;
  required string name = 2;
  optional uint64 task_capacity = 3;
  //repeated TaskDescriptor task_queue = 2;
  // ensemble(s)
  // state
  // optional ResourceStatsDescriptor stats = X
}
